# eventfor.us-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  pyproject.toml  swagger.json
.github/workflows/: continuous-deployment .yml  continuous-deployment.yml  continuous-integration.yml
configs/: nginx.conf
scripts/: entrypoint.sh
src/: .flake8  conftest.py  pytest.ini  swagger.json  uwsgi.ini
src/base/: __init__.py  constants.py  middlewares.py  repositories.py  settings.py  tests.py  urls.py  utils.py
src/events/: admin.py  constants.py  filters.py  managers.py  models.py  permissions.py  repositories.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_capacity.py  0004_alter_event_capacity.py
src/events/templates/admin/: event_list.html
src/events/tests/: factories.py
src/events/tests/integration/: test_event_category_views.py  test_event_filters.py  test_event_view.py  test_event_viewset.py
src/events/tests/unit/: test_event_category_creation.py  test_event_creation.py
src/users/: admin.py  managers.py  models.py  repositories.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/tests/: factories.py
src/users/tests/integration/: test_get_saved_events.py  test_get_user_view.py  test_logout_view.py  test_signin_view.py  test_signup_view.py
src/users/tests/unit/: test_user_creation.py
src/users/views/: __init__.py  authentication.py  profile.py
