[tool.poetry]
name = "eventfor-us-backend"
description = ""
version = "0.1.0"
authors = ["karuna <karuna@involve.software>"]

[tool.poetry.dependencies]
django = "5.0.2"
django-debug-toolbar = "4.3.0"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
environs = "10.3.0"
psycopg2-binary = "2.9.9"
pytest = "8.0.0"
pytest-django = "4.8.0"
python = "^3.11"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
isort = "^5.10.1"

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
